# randoeats

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  CLAUDE_CODE_PLACES_API_MIGRATION.md  CLAUDE_CODE_PROMPT_REDUCE_LIST_PADDING.md  CLAUDE_CODE_PROMPT_SLOT_MACHINE.md  CLAUDE_CODE_PROMPT_SLOT_MACHINE_V2.md  CLAUDE_CODE_PROMPT_SMALLER_CARDS.md  CLAUDE_FASTLANE_SETUP.md  Gemfile  RANDOEATS_PROJECT.md  README.md  TEKADEPT_ARCHITECTURE_SPEC.md  analysis_options.yaml  pubspec.yaml
.claude/: settings.local.json
.firebase/: hosting.YnVpbGQvd2Vi.cache
.github/: cspell.json
.github/workflows/: deploy-mobile.yml  deploy-web.yaml  deploy-web.yml  distribute.yml  (+1 more)
.maestro/: README.md  config.yaml  create_region.yaml  launch_and_spin.yaml  manage_region.yaml  rate_restaurant.yaml  settings_change.yaml  switch_region.yaml
bff/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.example.json  main.cc
bff/controllers/: RestaurantController.cc  RestaurantController.h
bff/services/: AppContext.h  GooglePlacesClient.cc  GooglePlacesClient.h  ICache.h  InMemoryCache.cc  InMemoryCache.h  MetricsLogger.cc  MetricsLogger.h  PlacesService.cc  PlacesService.h
bff/tools/: analyze_metrics.py
docs/: BACKEND_PROXY_PLAN.md  DESIGN_SYSTEM.md  FASTLANE_FIREBASE_SETUP.md  MVP_PLAN.md  SLOT_MACHINE_SPEC.md  SPECIFICATION.md  SPOTS_SPEC.md  WEB_SETUP.md
fastlane/: Appfile  Fastfile  Matchfile  README.md
integration_test/: screenshot_test.dart
ios/: Podfile
lib/: bootstrap.dart  main_production.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+151 files in other folders)
